ansible/roles/ingress_setup/files/netdeploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-multitool
  labels:
    tier: node
    app: network-multitool
spec:
  replicas: 4
  selector:
    matchLabels:
      tier: node
      app: network-multitool
  template:
    metadata:
      labels:
        tier: node
        app: network-multitool
    spec:
      containers:
      - name: network-multitool
        image: wbitt/network-multitool:alpine-extra
        ports:
        - containerPort: 1180
          name: http-port
        - containerPort: 11443
          name: https-port
        resources:
          requests:
            cpu: "1m"
            memory: "20Mi"
          limits:
            cpu: "10m"
            memory: "20Mi"
        securityContext:
          runAsUser: 0
          capabilities:
            add: ["NET_ADMIN"]
---
apiVersion: v1
kind: Service
metadata:
  name: network-multitool-service
spec:
  type: ClusterIP
  selector:
    app: network-multitool
  ports:
  - name: http
    port: 80
    targetPort: 1180
  - name: https
    port: 443
    targetPort: 11443
